# pacbrew-repo

./: .gitignore  README.md  ci-daemons.sh  ci-games.sh  ci-libs.sh  ci.sh
7zip/: PKGBUILD
SDL2/: PKGBUILD
SDL2_gfx/: PKGBUILD
SDL2_image/: PKGBUILD
SDL2_kitchensink/: PKGBUILD
SDL2_mixer/: PKGBUILD
SDL2_net/: PKGBUILD
SDL2_ttf/: PKGBUILD
a52dec/: PKGBUILD
bearssl/: PKGBUILD
bzip2/: PKGBUILD
curl/: PKGBUILD
devilutionx/: PKGBUILD
dht/: PKGBUILD
eduke32/: PKGBUILD
elfldr/: .gitignore  PKGBUILD
enet/: PKGBUILD
expat/: PKGBUILD
faad2/: PKGBUILD
fast_float/: PKGBUILD
fbneo/: .gitignore  PKGBUILD
ffmpeg/: PKGBUILD  ffplay-with-game-controller-input.diff  fftools-ffplay-add-basic-support-for-game-controller-input.diff
file/: PKGBUILD
flac/: PKGBUILD
fontconfig/: PKGBUILD
freetype/: PKGBUILD
ftpsrv/: .gitignore  PKGBUILD
gdbsrv/: .gitignore  PKGBUILD
giflib/: PKGBUILD
glew/: PKGBUILD
glm/: PKGBUILD
glu/: PKGBUILD
harfbuzz/: PKGBUILD
imgui/: PKGBUILD
jansson/: PKGBUILD
json-c/: PKGBUILD
klogsrv/: .gitignore  PKGBUILD
lakesnes/: .gitignore  PKGBUILD
lame/: PKGBUILD
lbreakouthd/: PKGBUILD
lexbor/: PKGBUILD
libarchive/: PKGBUILD
libass/: PKGBUILD
libb64/: PKGBUILD
libconfig/: PKGBUILD
libcxx/: PKGBUILD
libdeflate/: PKGBUILD
libevent/: PKGBUILD
libfribidi/: PKGBUILD
libiconv/: PKGBUILD
libjpeg-turbo/: PKGBUILD
libmad/: PKGBUILD
libmagic/: PKGBUILD
libmicrodns/: PKGBUILD  add-SO_REUSEPORT-for-multicast-compatibility.patch  (+1 more)
llvm/ps5-jit-example/: CMakeLists.txt  Makefile  main.c
(+58 files in other folders)
